--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "akasha"
+name = "eikyu"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,3 +7,4 @@ edition = "2024"
 clap = "4.5.45"
 serde = { version = "1.0.219", features = ["derive"] }
 crc32fast = "1.5.0"
+ignore = "0.4.23"
