--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ clap = "4.5.45"
 serde = { version = "1.0.219", features = ["derive"] }
 crc32fast = "1.5.0"
 ignore = "0.4.23"
+indicatif = "0.18.0"
+blake3 = "1.8.2"
