--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ crc32fast = "1.5.0"
 ignore = "0.4.23"
 indicatif = "0.18.0"
 blake3 = "1.8.2"
-inquire = "0.7.5"
+inquire = { version = "0.7.5", features = ["console", "date", "editor"] }
 glob = "0.3.3"
 chrono = "0.4.41"
+diff = "0.1.13"
+tmpfile = "0.0.3"
+tempfile = "3.20.0"
+serde_json = "1.0.142"
